--- a/RegIn_Yar/MainWindow.xaml
+++ b/RegIn_Yar/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RegIn_Yar"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Модуль авторизации" MinWidth="800" MinHeight="450" Height="450" Width="800" Icon="Images/646135.png">
     <Grid>
-        
+        <Frame x:Name="frame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
