Программирование окна Recovery. Ярыгин

--- a/RegIn_Yar/Elements/ElementCapture.xaml
+++ b/RegIn_Yar/Elements/ElementCapture.xaml
@@ -7,8 +7,21 @@
              mc:Ignorable="d" 
              d:DesignHeight="280" d:DesignWidth="100">
     <Grid>
-        <Grid x:Name="Capture" Height="50" VerticalAlignment="Top"/>
-        <Label Content="Enter capture:" Margin="0,50,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="InputCapture" HorizontalAlignment="Center" VerticalContentAlignment="Center" Height="25" VerticalAlignment="Top" Margin="0,75,0,0" KeyUp="EnterCapture"/>
+        <Grid
+            x:Name="Capture"
+            Height="50"
+            VerticalAlignment="Top"/>
+        <Label
+            Content="Enter capture:"
+            Margin="0,50,0,0"
+            VerticalAlignment="Top"/>
+        <TextBox
+            x:Name="InputCapture"
+            HorizontalContentAlignment="Center"
+            VerticalContentAlignment="Center"
+            Height="25"
+            VerticalAlignment="Top"
+            Margin="0,75,0,0"
+            KeyUp="EnterCapture"/>
     </Grid>
 </UserControl>
