--- a/RegIn_Yar/Pages/Recovery.xaml
+++ b/RegIn_Yar/Pages/Recovery.xaml
@@ -4,10 +4,10 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:RegIn_Yar.Pages"
-      mc:Ignorable="d" 
-    d:DesignHeight="450" d:DesignWidth="800"
-      xmlns:uc="clr-namespace:RegIn_Yar.Elements"
+            mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
       Title="Recovery"
+      xmlns:uc="clr-namespace:RegIn_Yar.Elements"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       TextElement.Foreground="{DynamicResource MaterialDesignBody}"
       TextElement.FontWeight="Regular"
@@ -16,6 +16,7 @@
       TextOptions.TextRenderingMode="Auto"
       Background="{DynamicResource MaterialDesignPaper}"
       FontFamily="{DynamicResource MaterialDesignFont}">
+
 
     <Grid>
         <materialDesign:Card
@@ -31,7 +32,7 @@
                     Margin="32"
                     VerticalAlignment="Top"
                     Width="100"
-                    Source="/RegIN;component/Images/ic-user.png">
+                    Source="C:\Users\Фима\source\repos\RegIn_Yar\RegIn_Yar\Images\ic-user.png">
                     
                     <Image.Clip>
                         <EllipseGeometry
